05_CubeIDE/.metadata/.plugins/org.eclipse.cdt.ui/1DOF_Bench.build.log
15:13:31 **** Incremental Build of configuration Debug for project 1DOF_Bench ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/yann.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/yann.d" -MT"Core/Src/yann.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/yann.o"
In file included from ../Core/Src/yann.c:8:
../Core/Inc/yann.h:12:14: error: unknown type name 'ADC_HandleTypeDef'
   12 | int ADCinput(ADC_HandleTypeDef *hadc,int polTime); //this function will start the adc and return values
      |              ^~~~~~~~~~~~~~~~~
../Core/Inc/yann.h:13:15: error: unknown type name 'TIM_HandleTypeDef'
   13 | void load_pwm(TIM_HandleTypeDef *htimX,int val);
      |               ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/yann.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:13:33 Build Failed. 3 errors, 0 warnings. (took 1s.652ms)

